# ViewSynthesis_DIBR

./: README.md
C++/: BackWarp.cu  CMakeLists.txt  CloseOpration.cu  backward_code.cu  example-app-backup-20211217.cpp  example-app-backup1.cpp  example-app.cpp  main.cpp  model_cpp.pt  opengl.cpp
python/: chessboard_corners.py  data.py  generate_crop_without_cc_data.m  loss.py  model_test.py  model_train.py  modules.py  params_compute.py  splitVideo.py  views2flow.py  views2flow_test.py  warp+cc.py
